# llmkit

./: .gitignore  README.md  cli.py  lambda_function.py  pyproject.toml  requirements.txt  run.py  run.sh
src/: adapters.py  allowlist.json  errors.py  logging_config.py  prompt_builder.py  runner.py  schema.py  utils.py
src/configs/: allowlist.yaml  llmkit.yaml
src/llmkit/: client.py  coerce.py  input_spec.py  logging_util.py  prompt_layers.py  registry.py  types.py
src/llmkit/adapters/: __init__.py  base.py  gemini.py  openai_style.py
src/prompts/: system_default.txt  system_json_contract.txt
src/rag/: README.md
tests/: test_input_spec.py  test_prompt_layers.py  test_registry.py
tests/assets/prompts/: system_json.txt
tests/assets/rag/: rag_sample.txt
tests/cases/: gemini_one_option.json  openai_one_option.json  ytl_one_option.json
